Text no longer overlap on itself
when changing the window of the browser

--- a/gallery.css
+++ b/gallery.css
@@ -28,10 +28,11 @@ body {
     font-family: 'Oswald', sans-serif;
     font-size: 50px;
     font-weight: 400;
-    position: absolute;
-    top: 40%;
-    margin: 0 10% 0 10%;
+    position: relative;
+    top: 20%;
+    margin: 20% 10% 0 10%;
     letter-spacing: 10px;
+    white-space: normal;
 }
 
 .description {
@@ -41,7 +42,8 @@ body {
     font-size: 25px;
     position: absolute;
     margin: 0 10% 0 10%;
-    top: 52%;
+    top: 55%;
+    white-space: normal;
 }
 
 .slider {
